--- a/sinav-okuma-sayfasi/package.json
+++ b/sinav-okuma-sayfasi/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "v-file-upload": "^3.1.7",
     "vue": "^2.7.10",
     "vuetify": "^2.6.0"
   },
@@ -20,6 +22,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "raw-loader": "^4.0.2",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
     "vue-cli-plugin-vuetify": "~2.5.5",
