--- a/sinav-okuma-sayfasi/package.json
+++ b/sinav-okuma-sayfasi/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "fs": "^0.0.1-security",
+    "line-reader": "^0.4.0",
     "v-file-upload": "^3.1.7",
     "vue": "^2.7.10",
     "vuetify": "^2.6.0"
