--- a/sinav-okuma-sayfasi/package.json
+++ b/sinav-okuma-sayfasi/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ag-grid-community": "^28.1.1",
+    "ag-grid-vue3": "^28.1.1",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "fs": "^0.0.1-security",
